xidlc/tests/snapshots/codegen_snapshot__axum__rust_annotation_passthrough.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
rust_annotation_passthrough.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(async_fn_in_trait)]
#[allow(
    non_snake_case,
    unused_attributes,
    unused_variables,
    unused_mut,
    unreachable_code,
    clippy::let_unit_value
)]
#[async_trait::async_trait]
pub trait RustHttp {
    #[cfg(feature = server)]
    async fn get_user(&self, user_id: u32) -> ::xidl_rust_axum::Result<String>;
    #[cfg(feature = server)]
    async fn get_attribute_display_name(&self) -> ::xidl_rust_axum::Result<String>;
    #[cfg(feature = server)]
    async fn set_attribute_display_name(
        &self,
        display_name: String,
    ) -> ::xidl_rust_axum::Result<()>;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_in_RustHttp {
    use super::*;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_out_RustHttp {
    use super::*;
}
#[derive(::serde::Deserialize)]
pub struct RustHttpGetUserPath {
    pub user_id: u32,
}
#[derive(::serde::Deserialize)]
struct RustHttpGetUserRequest {
    user_id: u32,
}
#[allow(clippy::manual_async_fn, unused_mut)]
impl<S> ::xidl_rust_axum::axum::extract::FromRequest<S> for RustHttpGetUserRequest
where
    S: Send + Sync,
{
    type Rejection = ::xidl_rust_axum::Error;
    fn from_request(
        req: ::xidl_rust_axum::axum::extract::Request,
        state: &S,
    ) -> impl ::core::future::Future<Output = Result<Self, Self::Rejection>> + Send {
        async move {
            let (mut parts, body) = req.into_parts();
            let _ = &body;
            let _ = state;
            let ::xidl_rust_axum::axum::extract::Path(xidl_path) = <::xidl_rust_axum::axum::extract::Path<
                RustHttpGetUserPath,
            > as ::xidl_rust_axum::axum::extract::FromRequestParts<
                S,
            >>::from_request_parts(&mut parts, state)
                .await
                .map_err(|err| ::xidl_rust_axum::Error::new(400, err.to_string()))?;
            let RustHttpGetUserPath { user_id } = xidl_path;
            let xidl_headers = &parts.headers;
            let _ = xidl_headers;
            Ok(Self { user_id })
        }
    }
}
pub type RustHttpSetAttributeDisplayNameRequestOutBody = String;
pub type RustHttpSetAttributeDisplayNameRequestInBody = String;
#[derive(::serde::Deserialize)]
struct RustHttpSetAttributeDisplayNameRequest {
    display_name: String,
}
#[allow(clippy::manual_async_fn, unused_mut)]
impl<S> ::xidl_rust_axum::axum::extract::FromRequest<S>
for RustHttpSetAttributeDisplayNameRequest
where
    S: Send + Sync,
{
    type Rejection = ::xidl_rust_axum::Error;
    fn from_request(
        req: ::xidl_rust_axum::axum::extract::Request,
        state: &S,
    ) -> impl ::core::future::Future<Output = Result<Self, Self::Rejection>> + Send {
        async move {
            let (mut parts, body) = req.into_parts();
            let _ = &body;
            let _ = state;
            let xidl_headers = &parts.headers;
            let _ = xidl_headers;
            if !::xidl_rust_axum::http::content_type_matches(
                xidl_headers,
                "text/plain",
            ) {
                return Err(::xidl_rust_axum::Error::unsupported_media_type());
            }
            let xidl_body_bytes = <::xidl_rust_axum::axum::body::Bytes as ::xidl_rust_axum::axum::extract::FromRequest<
                S,
            >>::from_request(
                    ::xidl_rust_axum::axum::extract::Request::from_parts(parts, body),
                    state,
                )
                .await
                .map_err(|err| ::xidl_rust_axum::Error::new(
                    err.status().as_u16(),
                    err.body_text(),
                ))?;
            let xidl_body: RustHttpSetAttributeDisplayNameRequestInBody = ::xidl_rust_axum::DeserializeFactory::new(
                    "text/plain",
                )
                .from_slice(&xidl_body_bytes)?;
            let display_name = xidl_body;
            Ok(Self { display_name })
        }
    }
}
pub struct RustHttpServer<T> {
    inner: ::std::sync::Arc<T>,
}
#[allow(non_snake_case)]
impl<T> RustHttpServer<T>
where
    T: RustHttp + Send + Sync + 'static,
{
    pub fn new(inner: T) -> Self {
        Self {
            inner: ::std::sync::Arc::new(inner),
        }
    }
    pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
        Self { inner }
    }
    pub fn router(self) -> xidl_rust_axum::axum::Router {
        let _svc = self.inner;
        xidl_rust_axum::axum::Router::new()
            .route(
                "/users/{user_id}",
                xidl_rust_axum::axum::routing::get(Self::get_user),
            )
            .route(
                "/attribute/display_name",
                xidl_rust_axum::axum::routing::get(Self::get_attribute_display_name),
            )
            .route(
                "/attribute/display_name",
                xidl_rust_axum::axum::routing::post(Self::set_attribute_display_name),
            )
            .with_state(_svc)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn get_user(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        request: RustHttpGetUserRequest,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/plain") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let RustHttpGetUserRequest { user_id } = request;
        let user_id: u32 = user_id;
        let mut resp = match svc.get_user(user_id).await {
            Ok(resp_value) => {
                let mut resp = {
                    let body_value: String = resp_value;
                    let _ = &body_value;
                    let body = xidl_rust_axum::SerializeFactory::new("text/plain")
                        .to_vec(&body_value)?;
                    ::xidl_rust_axum::axum::response::Response::builder()
                        .status(
                            ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                .unwrap(),
                        )
                        .header(
                            ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                            "text/plain",
                        )
                        .body(::xidl_rust_axum::axum::body::Body::from(body))
                        .map_err(|err| xidl_rust_axum::Error::new(
                            500,
                            format!("{err:?}"),
                        ))?
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn get_attribute_display_name(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/plain") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let mut resp = match svc.get_attribute_display_name().await {
            Ok(resp_value) => {
                let mut resp = {
                    let body_value: String = resp_value;
                    let _ = &body_value;
                    let body = xidl_rust_axum::SerializeFactory::new("text/plain")
                        .to_vec(&body_value)?;
                    ::xidl_rust_axum::axum::response::Response::builder()
                        .status(
                            ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                .unwrap(),
                        )
                        .header(
                            ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                            "text/plain",
                        )
                        .body(::xidl_rust_axum::axum::body::Body::from(body))
                        .map_err(|err| xidl_rust_axum::Error::new(
                            500,
                            format!("{err:?}"),
                        ))?
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn set_attribute_display_name(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        request: RustHttpSetAttributeDisplayNameRequest,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "application/json") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let RustHttpSetAttributeDisplayNameRequest { display_name } = request;
        let display_name: String = display_name;
        let mut resp = match svc.set_attribute_display_name(display_name).await {
            Ok(resp_value) => {
                let mut resp = {
                    let _ = resp_value;
                    ::xidl_rust_axum::axum::response::IntoResponse::into_response(
                        ::xidl_rust_axum::axum::http::StatusCode::NO_CONTENT,
                    )
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
}
impl<T> xidl_rust_axum::Service for RustHttpServer<T>
where
    T: RustHttp + Send + Sync + 'static,
{
    fn into_router(self) -> xidl_rust_axum::axum::Router {
        self.router()
    }
}
pub struct RustHttpClient {
    client: ::xidl_rust_axum::Client,
}
#[allow(non_snake_case)]
impl RustHttpClient {
    pub fn new(base_url: impl Into<String>) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::new(base_url),
        }
    }
    pub fn with_http(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
    ) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::with_http(base_url, http),
        }
    }
}
#[allow(non_snake_case)]
impl RustHttpClient {
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn get_user(&self, user_id: u32) -> Result<String, xidl_rust_axum::Error> {
        let xidl_path = "/users/{user_id}".to_string();
        let xidl_path = xidl_path.replace("{user_id}", &user_id.to_string());
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str("text/plain")
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        let resp = self
            .client
            .http()
            .execute(req)
            .await
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if resp.status().is_success() {
            let body = resp
                .bytes()
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            let body: String = xidl_rust_axum::DeserializeFactory::new("text/plain")
                .from_slice(&body)?;
            Ok(body)
        } else {
            let status = resp.status();
            let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
            Err(xidl_rust_axum::Error::from_http_response(status, body))
        }
    }
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn get_attribute_display_name(
        &self,
    ) -> Result<String, xidl_rust_axum::Error> {
        let xidl_path = "/attribute/display_name".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str("text/plain")
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        let resp = self
            .client
            .http()
            .execute(req)
            .await
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if resp.status().is_success() {
            let body = resp
                .bytes()
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            let body: String = xidl_rust_axum::DeserializeFactory::new("text/plain")
                .from_slice(&body)?;
            Ok(body)
        } else {
            let status = resp.status();
            let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
            Err(xidl_rust_axum::Error::from_http_response(status, body))
        }
    }
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn set_attribute_display_name(
        &self,
        display_name: String,
    ) -> Result<(), xidl_rust_axum::Error> {
        let xidl_path = "/attribute/display_name".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::POST, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "application/json",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        let body: String = display_name;
        let body = xidl_rust_axum::SerializeFactory::new("text/plain").to_vec(&body)?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::CONTENT_TYPE,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str("text/plain")
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        *req.body_mut() = Some(xidl_rust_axum::reqwest::Body::from(body));
        let resp = self
            .client
            .http()
            .execute(req)
            .await
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if resp.status().is_success() {
            Ok(())
        } else {
            let status = resp.status();
            let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
            Err(xidl_rust_axum::Error::from_http_response(status, body))
        }
    }
}
